{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 29,
  "lineage": "0d628c6f-1a88-2404-4368-e2bcf68edb52",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zigvy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:instance/i-0e543d94bbe14f2dc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e543d94bbe14f2dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08eefea5d898fa9c8",
            "private_dns": "ip-172-16-1-190.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.190",
            "public_ip": "13.214.155.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f8987e63c4d3fc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6fe9a257f3c53c6",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a72392f1f2f84b9c"
            ]
          },
          "dependencies": [
            "module.ngoc_security.aws_security_group.public_group",
            "module.ngoc_subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gate_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:internet-gateway/igw-0636e83aeff2644f2",
            "id": "igw-0636e83aeff2644f2",
            "owner_id": "568273381499",
            "tags": {
              "Name": "ngoc_igw"
            },
            "tags_all": {
              "Name": "ngoc_igw"
            },
            "vpc_id": "vpc-0b5056222d2ec7d86"
          },
          "dependencies": [
            "module.ngoc_vpc.aws_vpc.zigvy"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:security-group/sg-0042aa588f29d6d2a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0042aa588f29d6d2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.16.0/24"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_group",
            "name_prefix": "",
            "owner_id": "568273381499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security"
            },
            "tags_all": {
              "Name": "private_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5056222d2ec7d86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ngoc_vpc.aws_vpc.zigvy"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:security-group/sg-0a72392f1f2f84b9c",
            "description": "Allow TLS/SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a72392f1f2f84b9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_group",
            "name_prefix": "",
            "owner_id": "568273381499",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security"
            },
            "tags_all": {
              "Name": "public_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5056222d2ec7d86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ngoc_vpc.aws_vpc.zigvy"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:subnet/subnet-08f261efd96ed0f51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f261efd96ed0f51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568273381499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ngoc_private_subnets"
            },
            "tags_all": {
              "Name": "ngoc_private_subnets"
            },
            "vpc_id": "vpc-0b5056222d2ec7d86"
          },
          "dependencies": [
            "module.ngoc_vpc.aws_vpc.zigvy"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:subnet/subnet-0f6fe9a257f3c53c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6fe9a257f3c53c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568273381499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ngoc_public_subnets"
            },
            "tags_all": {
              "Name": "ngoc_public_subnets"
            },
            "vpc_id": "vpc-0b5056222d2ec7d86"
          },
          "dependencies": [
            "module.ngoc_vpc.aws_vpc.zigvy"
          ]
        }
      ]
    },
    {
      "module": "module.ngoc_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zigvy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:568273381499:vpc/vpc-0b5056222d2ec7d86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0233abf266616ecc8",
            "default_route_table_id": "rtb-0d818d46c08e1b379",
            "default_security_group_id": "sg-0905cc550337ea246",
            "dhcp_options_id": "dopt-0606f2ae3ac201bab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5056222d2ec7d86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d818d46c08e1b379",
            "owner_id": "568273381499",
            "tags": {
              "Name": "Zigvy-Vpc"
            },
            "tags_all": {
              "Name": "Zigvy-Vpc"
            }
          }
        }
      ]
    }
  ]
}